--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Todor Pophristic
 author:
   name: Todor Pophristic
-  email: your-email@domain.com
+  email: todor.pophristic@gmail.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
@@ -26,8 +26,10 @@ minima:
 
   # Generate social links in footer.
   #
-  # social_links:
-  #   - { platform: devto,          user_url: "https://dev.to/jekyll" }
+  social_links:
+    - { platform: youtube,          user_url: "https://youtube.com/@thecurbproductions619?si=pHJ7xyG4UjzprrRC" }
+    - { platform: instagram,      user_url: "https://instagram.com/_the_curb_?igshid=MzMyNGUyNmU2YQ==" }
+
   #   - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
   #   - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
   #   - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
