--- a/_data/movies.yml
+++ b/_data/movies.yml
@@ -1,6 +1,6 @@
 - name: Dandies of LA
   year: 2023
-  movieID: Dandies
+  movieID: dandies
   url: fX-diKzoh5Y?si=-d5wWBpM37VAbvD2
   description: Two men on their way to rob a deli storing cartel bricks, cross paths with an older man on the way to the same deli but to buy a sandwich.
   actors: "Brandon Bates, Dylan Marusich, and Lonnie Lewis"
@@ -13,7 +13,7 @@
 - name: tête-à-tête
   year: 2023
   description: A father son relationship is tested after the father’s newest scheme goes exactly as planned.
-  movieID: Tet
+  movieID: tet
   actors: "Todor Pophristic, Milan Pophristic, and Krish Khanna"
   editedBy: Finn Neuneier
   shotBy: Finn Neuneier
@@ -30,7 +30,7 @@
 
 - name: Laughing Matter
   year: 2023
-  movieID: LaughingMatter
+  movieID: laughingmatter
   description: "The mother of a lost child receives a disturbing phone call regarding her daughter's location. "
   url: kAJx1TaDj3w?si=mGEopaW5eH-QfbSc
   actors: "Isabella Posada, Youssef Haroun, Leone Robbins, and Rosaury Pilier"
@@ -52,7 +52,7 @@
 - name: Manifest Mannequin_(1987)
   year: 2022
   description: "Shrouded in delusion, a man in love with a mannequin prepares for a job interview, with a subsequent descent into madness. "
-  movieID: Mannequin
+  movieID: mannequin
   url: kAJx1TaDj3w?si=mGEopaW5eH-QfbSc&amp;start=660
   actors: "Krish Khanna and Wolfgang Shrieder"
   editedBy: Finn Neuneier
@@ -63,7 +63,7 @@
 
 - name: Babe in Arms
   year: 2023
-  movieID: BabeInArms
+  movieID: babeinarms
   url: kAJx1TaDj3w?si=mGEopaW5eH-QfbSc&amp;start=1240
   description: "A desperate man calls family and friends in need of money or a place to stay."
   actors: "Isabella Posada, Youssef Haroun, Leone Robbins, and Rosaury Pilier"
@@ -79,7 +79,7 @@
 
 - name: Oleander
   year: 2021
-  movieID: Oleander
+  movieID: oleander
   url: 2HbgCZn1aaQ?si=HVXWu4udj2uxOGzj
   description: "Sean finds it more and more difficult to lose himself in escapism as the obstacles around him become too much to bear."
   actors: "Alexander Margulis, Elias Gitterman, Emma Mcmahon, James Weinstien, and Alkis Siddosis"
