url in the menu.yml was still uppercased for Mannequin movie, leading to a broken link

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -11,7 +11,7 @@
     - title: Laughing Matter
       url: /movies/laughingmatter.html
     - title: Manifest Mannequin_(1987)
-      url: /movies/Mannequin.html
+      url: /movies/mannequin.html
     - title: Babe in Arms
       url: /movies/babeinarms.html
     - title: Oleander
