Changed dates of some awards; added an award; updated events to past event

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -4,9 +4,10 @@
   date: 2023-10-12
   location: Princeton, NJ
   link: 'https://princetonlibrary.libnet.info/event/9222224'
-  description: "In this award-winning drama, danger arises from a marriage arranged for a Kaqchikel girl living in Guatemala. Following the screening, <a href=\"https://as.nyu.edu/faculty/dylon-l-robbins.html\">Dylon Robbins</a>, associate professor and director, Center for Latin American and Caribbean Studies at NYU, will give a talk.
+  description: "In this award-winning drama, danger arises from a marriage arranged for a Kaqchikel girl living in Guatemala. Following the screening, <a href=\"https://as.nyu.edu/faculty/dylon-l-robbins.html\">Dylon Robbins</a>, associate professor and director, Center for Latin American and Caribbean Studies at NYU, gave a talk.
   <br><br>
-  Organized by Todor Pophristic and Leone Robbins in conjunction with the Princeton Public Library"
+  Was screened as part of the Princeton Public Library's celebration of National Hispanic Heritage Month and in association with Indigenous Peoples' Day.
+  Organized by Todor Pophristic and Leone Robbins in collaboration with the Princeton Public Library."
   image: ixcanul_poster
 
 - name: Walnut Lane Film Festival
@@ -15,5 +16,5 @@
   link: 'https://princetonlibrary.libnet.info/event/8164592'
   description: "This event showcases five short films in a range of genres created by Princeton Middle School middle school students, organized and curated by students from Princeton High School.
   <br><br>
-  Organized by Todor Pophristic in conjunction with the Princeton Public Library"
+  Organized by Todor Pophristic in collaboration with the Princeton Public Library."
   image: ppl_poster
