--- a/_data/movies.yml
+++ b/_data/movies.yml
@@ -21,12 +21,14 @@
   directedBy: Todor Pophristic
   url: kAJx1TaDj3w?si=mGEopaW5eH-QfbSc&amp;start=237
   Awards:
+    Winner:
+      - Cayuga Film Festival (High School Category), New York, USA, 2023
     Semi-Finalist:
-        - Indie Short Fest, Los Angeles Interional Film Festival, California USA, 2023
+      - Indie Short Fest, Los Angeles Interional Film Festival, California, USA, 2023
     Official Selection:
-      - Sound and Music Film Festival Makedonska 21; Belgrade, Serbia, 2023
-      - 1:11 High School Film Festival; North Carolina, USA, 2023
-      - Princeton Student Film Festival; New Jersey, USA, 2023
+      - Sound and Music Film Festival Makedonska 21, Belgrade, Serbia, 2023
+      - 1:11 High School Film Festival, North Carolina, USA, 2023
+      - Princeton Student Film Festival, New Jersey, USA, 2023
 
 - name: Laughing Matter
   year: 2023
@@ -40,14 +42,14 @@
   directedBy: Todor Pophristic
   Awards:
     Winner:
-      - Boulder International Film Festival; Colorado, USA, 2023
+      - Boulder International Film Festival, Colorado, USA, 2023
     Finalist:
-      - "RTF Media Fest, Rowan University, NJ High School Competition; New Jersey, USA, 2023"
+      - "RTF Media Fest, Rowan University, NJ High School Competition, New Jersey, USA, 2023"
     Semi-Finalist:
-      - Indie Short Fest, Los Angeles International Film Festival; California, USA, 2023
+      - Indie Short Fest, Los Angeles International Film Festival, California, USA, 2023
     Official Selection:
-      - "24th Newport Beach Film Festival; California, USA, 2023"
-      - "SIFF's 20th Anniversary presents our High School Film Competition; New York, USA, 2023"
+      - "24th Newport Beach Film Festival, California, USA, 2023"
+      - "20th Syracuse International Film Festival (High School Film Competition), New York, USA, 2023"
 
 - name: Manifest Mannequin_(1987)
   year: 2022
@@ -73,9 +75,9 @@
   directedBy: Todor Pophristic
   Awards:
     Semi-Finalist:
-      - Indie Short Fest, Los Angeles International Film Festival; California, USA, 2023
+      - Indie Short Fest, Los Angeles International Film Festival, California, USA, 2023
     Official Selection:
-      - All American High School Film Festival; New York, USA, 2023
+      - All American High School Film Festival, New York, USA, 2023
 
 - name: Oleander
   year: 2021
@@ -89,7 +91,7 @@
   directedBy: Todor Pophristic
   Awards:
     Winner:
-      - Walnut Lane Film Festival; New Jersey, USA, 2021
+      - Walnut Lane Film Festival, New Jersey, USA, 2021
     Offical Selection:
-      - All American High School Film Festival; New York, USA, 2021
-      - Newark International Film Festival; New Jersey, USA, 2021
+      - All American High School Film Festival, New York, USA, 2021
+      - Newark International Film Festival, New Jersey, USA, 2021
