Changed spelling error under rewards of tete a tete film

--- a/_data/movies.yml
+++ b/_data/movies.yml
@@ -24,7 +24,7 @@
     Winner:
       - Cayuga Film Festival (High School Category), New York, USA, 2023
     Semi-Finalist:
-      - Indie Short Fest, Los Angeles Interional Film Festival, California, USA, 2023
+      - Indie Short Fest, Los Angeles International Film Festival, California, USA, 2023
     Official Selection:
       - Sound and Music Film Festival Makedonska 21, Belgrade, Serbia, 2023
       - 1:11 High School Film Festival, North Carolina, USA, 2023
